--- a/package.json
+++ b/package.json
@@ -13,12 +13,23 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
+    "@heroicons/react": "^2.1.3",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@types/chart.js": "^2.9.41",
+    "chart.js": "^4.4.2",
+    "faker": "^5.5.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-chartjs": "^1.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-charts": "^3.0.0-beta.57",
+    "react-dom": "^18.2.0",
+    "react-resizable": "^3.0.5",
+    "react-router-dom": "^6.22.3",
+    "recharts": "^2.12.6"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
